Gemaakt met Colaboratory

--- a/describing_data.ipynb
+++ b/describing_data.ipynb
@@ -800,8 +800,8 @@
         "*TODO: Fill in the right boxes.*\n",
         "\n",
         "   - [ ] \"25% of all Fooville inhabitants have an income above 20.000\"\n",
-        "   - [ ] \"50% of all Fooville inhabitants have an income between around 23.000 and around 52.000\"\n",
-        "   - [ ] \"There are no Fooville inhabitants with an income above 98.000.\"\n",
+        "   - [x ] \"50% of all Fooville inhabitants have an income between around 23.000 and around 52.000\"\n",
+        "   - [x ] \"There are no Fooville inhabitants with an income above 98.000.\"\n",
         "\n",
         "**18. Does the mean always fall between the first and third quartile? Explain your answer.**\n",
         "\n",
